# wild_rift_meta

./: .gitignore  README.md  pyproject.toml
wildrift/: __init__.py
wildrift/meta_files/: meta.txt  s_tier.txt
wildrift/scripts/: discord.py  get_build.py  get_meta.py  wildrift.py  wildrift_bot.py
