[tool.poetry]
name = "wildrift"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wildrift"}]

[tool.poetry.scripts]
wildrift = "wildrift.scripts.wildrift:main"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
bs4 = "^0.0.1"
discord = "^2.1.0"
asyncio = "^3.4.3"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.2"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
